proptest-macro/src/property_test/snapshots/proptest_macro__property_test__codegen__snapshot_tests__arg_pattern.snap
---
source: proptest-macro/src/property_test/codegen.rs
assertion_line: 255
expression: formatted
---
#[test]
fn foo() -> ::proptest::strict::TestResult {
    #[derive(Debug)]
    struct FooArgs {
        arg0: (i32, i32),
    }
    impl ::proptest::prelude::Arbitrary for FooArgs {
        type Parameters = ();
        type Strategy = ::proptest::strategy::Map<
            ::proptest::arbitrary::StrategyFor<((i32, i32),)>,
            fn(((i32, i32),)) -> Self,
        >;
        fn arbitrary_with((): Self::Parameters) -> Self::Strategy {
            use ::proptest::strategy::Strategy;
            ::proptest::prelude::any::<((i32, i32),)>().prop_map(|(arg0,)| Self { arg0 })
        }
    }
    let strategy = ::proptest::strategy::Strategy::prop_map(
        ::proptest::prelude::any::<FooArgs>(),
        |values| ::proptest::sugar::NamedArguments(stringify!(FooArgs), values),
    );
    ::proptest::strict::ensure_property(
        &strategy,
        concat!(module_path!(), "::", stringify!(foo)),
        |::proptest::sugar::NamedArguments(_, FooArgs { arg0: (x, y) })| {
            let _product = x * y;
            Ok(())
        },
    )
}
