proptest-macro/src/property_test/snapshots/proptest_macro__property_test__codegen__snapshot_tests__return_value.snap
---
source: proptest-macro/src/property_test/codegen.rs
assertion_line: 257
expression: formatted
---
#[test]
fn return_value() -> ::proptest::strict::TestResult {
    #[derive(Debug)]
    struct ReturnValueArgs {
        x: i32,
        y: i32,
    }
    impl ::proptest::prelude::Arbitrary for ReturnValueArgs {
        type Parameters = ();
        type Strategy = ::proptest::strategy::Map<
            ::proptest::arbitrary::StrategyFor<(i32, i32)>,
            fn((i32, i32)) -> Self,
        >;
        fn arbitrary_with((): Self::Parameters) -> Self::Strategy {
            use ::proptest::strategy::Strategy;
            ::proptest::prelude::any::<(i32, i32)>().prop_map(|(x, y)| Self { x, y })
        }
    }
    let strategy = ::proptest::strategy::Strategy::prop_map(
        ::proptest::prelude::any::<ReturnValueArgs>(),
        |values| ::proptest::sugar::NamedArguments(stringify!(ReturnValueArgs), values),
    );
    ::proptest::strict::ensure_property(
        &strategy,
        concat!(module_path!(), "::", stringify!(return_value)),
        |::proptest::sugar::NamedArguments(_, ReturnValueArgs { x, y })| {
            let _ = (x, y);
            Ok(())
        },
    )
}
